--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1472,6 +1472,7 @@ main {
   grid-gap: 1.4vw;
   /* margin-top: 5vw; */
   margin-bottom: 7.7vw;
+  overflow: hidden;
 }
 .services_block_grid {
   display: grid;
@@ -1484,6 +1485,12 @@ main {
   grid-template-columns: repeat(3,1fr);
   grid-template-rows: auto;
   grid-gap: 1.4vw;
+  position: relative;
+  top: 100px;
+  transition: all 0.5s ease;
+}
+.services_block_flex.active {
+  top: 0;
 }
 .services_block_item {
   position: relative;
@@ -1649,9 +1656,13 @@ main {
   /* letter-spacing: 1px; */
 }
 .portfolio_title_line {
-  width: 100%;
+  width: 10%;
   height: 2px;
   background-color: #2D2D2D;
+  transition: all 0.5s ease;
+}
+.portfolio_title_line.active {
+  width: 100%;
 }
 .portfolio_category_mob {
   display: none;
