--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -52,7 +52,7 @@ body {
   font-kerning: normal;
 }
 video {
-  display: inline-block;
+  display: block;
 }
 a {
   background-color: transparent;
@@ -1299,10 +1299,12 @@ main {
 .services_video_title span {
   font-size: 4.5vw;
   line-height: 4.7vw;
-  font-weight: 600;
   color: #FFFFFF;
   margin-bottom: 1.2vw;
   text-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
+}
+.services_video_title span {
+  font-weight: 600;
 }
 .services_video_title span.subText {
   font-weight: 400;
@@ -1356,9 +1358,6 @@ main {
   display: flex;
   justify-content: space-between;
   margin-top: 4.5vw;
-}
-.contacts_line {
-  border-top: 2px solid #2D2D2D;
 }
 .contacts_appeal {
   font-size: 1.8vw;
@@ -1467,8 +1466,6 @@ main {
 
 
 .main_title_bcg {
-  position: relative;
-  top: -5px;
   background-image: url(../images/main_background_title.jpg);
   padding: 4vw 0;
   margin-bottom: 4.2vw;
@@ -1476,13 +1473,9 @@ main {
 .main_title_h2 {
   font-size: 3.5vw;
   line-height: 3.8vw;
-  color: transparent;
   text-align: center;
   letter-spacing: 0.07vw;
-  background-color: #8a8a8a;
-  color: transparent;
-  text-shadow: -1px 1px 1px #c7c7c7;
-  background-clip: text;
+  color: #8a8a8a;
 }
 .services_block {
   display: grid;
@@ -1675,10 +1668,12 @@ main {
   /* letter-spacing: 1px; */
 }
 .portfolio_title_line {
-  width: 10%;
+  width: 0;
   height: 2px;
   background-color: #2D2D2D;
-  transition: all 0.5s ease;
+  transition: all 0.5s ease-in-out;
+  transition-delay: 0.2s;
+  animation: opacity 0.2s;
 }
 .portfolio_title_line.active {
   width: 100%;
@@ -1947,17 +1942,12 @@ main {
   line-height: 4.7vw;
   margin-bottom: 2.1vw;
 }
-.studio_line {
-  width: 100%;
-  height: 2px;
-  background-color: #2D2D2D;
-  margin-bottom: 3vw;
-}
 .studio_mtext {
   font-size: 2.5vw;
   line-height: 3.5vw;
   color: #313131;
   margin-bottom: 0;
+  margin-top: 3vw;
 }
 .studio_item {
   display: flex;
@@ -2578,7 +2568,7 @@ main {
 
 
 
-.services_add_building {
+/* .services_add_building {
   display: flex;
   justify-content: space-between;
   margin-bottom: 12.5vw;
@@ -2601,7 +2591,7 @@ main {
   width: 37%;
   position: relative;
   top: -4.2vw;
-}
+} */
 
 
 .presentation {
@@ -2686,7 +2676,7 @@ main {
   border-bottom: 2.4vw solid transparent;
 }
 .video_block_presentation_button_pause {
-  background-image: url(https://i-project.by/wp-content/uploads/2020/10/video_pause.svg);
+  background-image: url(../images/video_pause.svg);
   background-repeat: no-repeat;
   background-size: 21%;
   background-position: center;
@@ -3768,12 +3758,10 @@ main {
     line-height: 85px;
     margin-bottom: 38px;
   }
-  .studio_line {
-    margin-bottom: 54px;
-  }
   .studio_mtext {
     font-size: 45px;
     line-height: 63px;
+    margin-top: 54px;
   }
   .studio_item {
     margin-bottom: 180px;
@@ -4765,6 +4753,11 @@ main {
     background-image: url(../images/catalog_process_big.png);
   }
 }
+@media screen and (min-width: 769px) and (max-width: 1440px) {
+  .main_title_h2 {
+    font-size: 3.42vw;
+  }
+}
 @media screen and (max-width: 768px) {
   sup {
     top: -1vw;
@@ -5523,10 +5516,7 @@ main {
     font-weight: 400;
     text-align: left;
     color: #2D2D2D;
-    background-color: transparent;
-    text-shadow: none;
   }
-
   .services_video {
     min-height: 133vw;
   }
